@@ -1,6 +1,7 @@
 2013-06-14  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #49124: Automated PHP Syntax check on LanguagePackTemplates fails
+	* Resolves #49142: Add a method to Language Repository
 
 2013-06-06  Stanislas Rolland  <typo3@sjbr.ca>
 
